// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__container___29iSI"
>
  <div
    className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__ChallengeSearchBar___fvE3o"
    role="search"
  >
    <div
      className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__input-container___1II2g"
      htmlFor="search-challenges"
    >
      <input
        id="search-challenges"
        onChange={[Function]}
        onInput={[Function]}
        placeholder=""
        type="text"
        value="query"
      />
      <span
        className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__SearchButton___3GzR0"
      >
        <ZoomIcon
          className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__zoomIcon___3d_cL"
          fill="none"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__container___29iSI"
>
  <div
    className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__ChallengeSearchBar___fvE3o"
    role="search"
  >
    <div
      className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__input-container___1II2g"
      htmlFor="search-challenges"
    >
      <input
        id="search-challenges"
        onChange={[Function]}
        onInput={[Function]}
        placeholder=""
        type="text"
        value=""
      />
      <span
        className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__SearchButton___3GzR0"
      >
        <ZoomIcon
          className="src-shared-components-challenge-listing-Filters-ChallengeSearchBar-___style__zoomIcon___3d_cL"
          fill="none"
          height="12"
          viewBox="0 0 12 12"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        />
      </span>
    </div>
  </div>
</div>
`;
